--- a/ProgNewsWebSite/ProgNewsWebSite.csproj
+++ b/ProgNewsWebSite/ProgNewsWebSite.csproj
@@ -169,7 +169,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
+    <Compile Include="Areas\Admin\Controllers\DefaultAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\PageGroupsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\NewsPageController.cs" />
+    <Compile Include="Classes\PersianConvertor.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -232,6 +235,12 @@
     <Content Include="Content\fonts\yekanweb.woff" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Areas\Admin\Views\NewsPage\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\NewsPage\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\NewsPage\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\NewsPage\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\NewsPage\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\DefaultAdmin\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -282,6 +291,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="PageImages\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
