--- a/ProgNewsWebSite/ProgNewsWebSite.csproj
+++ b/ProgNewsWebSite/ProgNewsWebSite.csproj
@@ -293,6 +293,9 @@
     <Content Include="Views\News\ShowGroupInMenu.cshtml" />
     <Content Include="Views\News\TopNews.cshtml" />
     <Content Include="Views\Home\Slider.cshtml" />
+    <Content Include="Views\News\LastNews.cshtml" />
+    <Content Include="Views\News\ArchiveNews.cshtml" />
+    <Content Include="Views\News\ShowNewsByGroupId.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
