Add news detail view and comment functionality (have some bugs in ajax section)
Implemented the ShowNews action and view to display individual news articles. Added PageCommentRepository and updated IPageCommentRepotistory to support adding and retrieving comments. Updated NewsController to handle comment submission. Modified news listing views and slider to link to the new news detail page. Adjusted comment form button styles in CSS.

--- a/DataLayer/DataLayer.csproj
+++ b/DataLayer/DataLayer.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Repositories\IPageCommentRepotistory.cs" />
     <Compile Include="Repositories\IPageGroupRepository.cs" />
     <Compile Include="Repositories\IPageRepository.cs" />
+    <Compile Include="Services\PageCommentRepository.cs" />
     <Compile Include="Services\PageGroupRepository.cs" />
     <Compile Include="Services\PageRepository.cs" />
     <Compile Include="ViewModels\ShowGroupsViewModels.cs" />
