--- a/ProgNewsWebSite/ProgNewsWebSite.csproj
+++ b/ProgNewsWebSite/ProgNewsWebSite.csproj
@@ -296,6 +296,7 @@
     <Content Include="Views\News\LastNews.cshtml" />
     <Content Include="Views\News\ArchiveNews.cshtml" />
     <Content Include="Views\News\ShowNewsByGroupId.cshtml" />
+    <Content Include="Views\News\ShowNews.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
