--- a/ProgNewsWebSite/ProgNewsWebSite.csproj
+++ b/ProgNewsWebSite/ProgNewsWebSite.csproj
@@ -297,6 +297,7 @@
     <Content Include="Views\News\ArchiveNews.cshtml" />
     <Content Include="Views\News\ShowNewsByGroupId.cshtml" />
     <Content Include="Views\News\ShowNews.cshtml" />
+    <Content Include="Views\News\ShowComments.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
