--- a/ProgNewsWebSite/ProgNewsWebSite.csproj
+++ b/ProgNewsWebSite/ProgNewsWebSite.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\NewsController.cs" />
+    <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -298,6 +299,7 @@
     <Content Include="Views\News\ShowNewsByGroupId.cshtml" />
     <Content Include="Views\News\ShowNews.cshtml" />
     <Content Include="Views\News\ShowComments.cshtml" />
+    <Content Include="Views\Search\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
