--- a/ProgNewsWebSite/Web.config
+++ b/ProgNewsWebSite/Web.config
@@ -17,16 +17,16 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+	<add key="owin:AutomaticAppStartup" value="false" />
   </appSettings>
   <system.web>
-    <authentication mode="None" />
+	  <authentication mode="Forms">
+		  <forms name="ProgNews" loginUrl="/Account/Login" timeout="43200"/>
+	  </authentication>
     <compilation debug="true" targetFramework="4.5.1" />
     <httpRuntime targetFramework="4.5.1" />
   </system.web>
   <system.webServer>
-    <modules>
-      <remove name="FormsAuthentication" />
-    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
